Lägger till de grundläggande variablerna som behövs

--- a/BollingerTradingApp.ipynb
+++ b/BollingerTradingApp.ipynb
@@ -31,7 +31,14 @@
      ]
     }
    ],
-   "source": [],
+   "source": [
+    "priceindex = [] #index/varje given tidpunkt för simulationen (representerar x-axeln i diagrammet)\n",
+    "stockprices = [] # En lista som populeras med aktiepriser när simulationen körs (representerar y-axeln i diagrammet)\n",
+    "tradingperiod = int(input(\"Ange antalet tidsenheter tradingsimulatorn körs\")) # längden på simulationen\n",
+    "profitorloss = 0 # arbiträrt startvärde, det kommer senare att tillskrivas ett värde för varje tdsenhert som simulerar prisfluktuation \n",
+    "startprice = float(input(\"Ange aktiens initiala värde i början av tidsperioden\")) # aktiens ursprungliga värde, det styr antalet enheter man kan köpa vid varje given tidpunkt\n",
+    "windowsize = int(input(\"Ange antalet tidsenheter som det glidande medelvärdet ska beräknas över\")) # En nödvändig variabel för att uträkna det glidande genomsnittet, samt Bollinger-bandens beskaffenhet."
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
@@ -71,6 +78,6 @@
    "version": "2.7.6"
   }
  },
- "nbformat": 4,
+ "nbformat": 5,
  "nbformat_minor": 5
 }
