--- a/BollingerTradingApp.ipynb
+++ b/BollingerTradingApp.ipynb
@@ -32,12 +32,24 @@
     }
    ],
    "source": [
-    "priceindex = [] #index/varje given tidpunkt för simulationen (representerar x-axeln i diagrammet)\n",
+    "priceindex = [] #Index/varje given tidpunkt för simulationen (representerar x-axeln i diagrammet)\n",
     "stockprices = [] # En lista som populeras med aktiepriser när simulationen körs (representerar y-axeln i diagrammet)\n",
-    "tradingperiod = int(input(\"Ange antalet tidsenheter tradingsimulatorn körs\")) # längden på simulationen\n",
-    "profitorloss = 0 # arbiträrt startvärde, det kommer senare att tillskrivas ett värde för varje tdsenhert som simulerar prisfluktuation \n",
-    "startprice = float(input(\"Ange aktiens initiala värde i början av tidsperioden\")) # aktiens ursprungliga värde, det styr antalet enheter man kan köpa vid varje given tidpunkt\n",
-    "windowsize = int(input(\"Ange antalet tidsenheter som det glidande medelvärdet ska beräknas över\")) # En nödvändig variabel för att uträkna det glidande genomsnittet, samt Bollinger-bandens beskaffenhet."
+    "tradingperiod = int(input(\"Ange antalet tidsenheter tradingsimulatorn körs\")) # Längden på simulationen\n",
+    "profitorloss = 0 # Arbiträrt startvärde, det kommer senare att tillskrivas ett värde för varje tdsenhert som simulerar prisfluktuation \n",
+    "startprice = float(input(\"Ange aktiens initiala värde i början av tidsperioden\")) # Aktiens ursprungliga värde, det styr antalet enheter man kan köpa vid varje given tidpunkt\n",
+    "windowsize = int(input(\"Ange antalet tidsenheter som det glidande medelvärdet ska beräknas över\")) # En nödvändig variabel för att uträkna det glidande genomsnittet, samt Bollinger-bandens beskaffenhet.\n",
+    "\n",
+    "for i in range(tradingperiod): # Här fylls listorna som utgör x och y-värden för diagrammet\n",
+    "    priceindex.append(i) # Varje index sparas i listan för tidpunkter \n",
+    "    chance = np.random.randint(0, 12585) # Chance-variabeln represneterar sannolikheten att priset stiger eller sjunker vid varje given tidpunkt. Den är hämtad från ett genomsnitt av S&P-aktiers fluktuationer, liksom den genomsnittliga procentuella sjunkning eller stigning vid varje tidpunkt. Det är menat som ett exempel och inte ett vetenskaolig underlag, varför detaljer om denna informationsextrahering ej är inkluderad här. \n",
+    "    if chance <6628: # sannolikheten att aktien stiger (cirka 52,7%)\n",
+    "        profitorloss = 1.01503 # Aktien stiger med 1,5% om det slumpade värdet är under 6628\n",
+    "    else:\n",
+    "        profitorloss = 0.98574 # Aktien sjunker med lite över 1,4% om värdet är annat än ovanstående\n",
+    "    if len(stockprices) == 0: # I simulationens initiering är startpriset multiplicerat med prisfluktuationen det vi vill lägga in i aktieprislistan\n",
+    "       stockprices.append(startprice * profitorloss) # Aktiepriset läggs till i listan\n",
+    "    if len(stockprices) > 0 and len(stockprices) < tradingperiod: # Om aktieprislistan är längre än 0, är det senaste värdet som lagts till, det som ska vara föremål för prisfluktuationen.\n",
+    "        stockprices.append(stockprices[-1] * profitorloss) #Det senaste värdet i aktieprislistan blir utsatt för procentuell sänkning eller ökning och läggs till längst fram i listan. Detta repeteras sedan för hela tidsperioden som användaren angivit."
    ],
    "metadata": {
     "collapsed": false,
