Rättade stavfel och skapade dataframen som innehåller de nödvändiga kolumnera

--- a/BollingerTradingApp.ipynb
+++ b/BollingerTradingApp.ipynb
@@ -7,13 +7,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-01T09:57:35.598346700Z",
-     "start_time": "2024-02-01T09:57:34.598179200Z"
+     "end_time": "2024-02-01T12:08:56.999831400Z",
+     "start_time": "2024-02-01T12:08:54.686580600Z"
     }
    },
    "outputs": [],
    "source": [
-    "import numpy as np # Importerar numpy, för att kunan generera (pseudo)slumpade tal\n",
+    "import numpy as np # Importerar numpy, för att kunna generera (pseudo)slumpade tal\n",
     "import plotly.express as px # importerar plotly för att generera diagram som är mer interaktiva än matplot\n",
     "import plotly.graph_objects as go # eftersom att flera linjer inkluderas i diagrammet, används graph_objects\n",
     "import pandas as pd # pandas importeras för att skapa dataframes där den genererade datan ingår\n",
@@ -22,15 +22,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "priceindex = [] #Index/varje given tidpunkt för simulationen (representerar x-axeln i diagrammet)\n",
     "stockprices = [] # En lista som populeras med aktiepriser när simulationen körs (representerar y-axeln i diagrammet)\n",
@@ -49,17 +41,26 @@
     "    if len(stockprices) == 0: # I simulationens initiering är startpriset multiplicerat med prisfluktuationen det vi vill lägga in i aktieprislistan\n",
     "       stockprices.append(startprice * profitorloss) # Aktiepriset läggs till i listan\n",
     "    if len(stockprices) > 0 and len(stockprices) < tradingperiod: # Om aktieprislistan är längre än 0, är det senaste värdet som lagts till, det som ska vara föremål för prisfluktuationen.\n",
-    "        stockprices.append(stockprices[-1] * profitorloss) #Det senaste värdet i aktieprislistan blir utsatt för procentuell sänkning eller ökning och läggs till längst fram i listan. Detta repeteras sedan för hela tidsperioden som användaren angivit."
+    "        stockprices.append(stockprices[-1] * profitorloss) #Det senaste värdet i aktieprislistan blir utsatt för procentuell sänkning eller ökning och läggs till längst fram i listan. Detta repeteras sedan för hela tidsperioden som användaren angivit.\n",
+    "        \n",
+    "df = pd.DataFrame(stockprices, columns=['Data']) # En Pandas-dataframe skapas, där aktieprisutvecklingen sparas i en ny kolumn kallad \"Data\" \n",
+    "\n",
+    "\n",
+    "df['Moving Average'] = df['Data'].rolling(window=windowsize).mean() # Det glidande genomsnittet räknas ut genom att använda de inbyggda funktionerna \"rolling\" och \"mean\", som tar emot aktieprislistan och variablen windowsize som representerar hur många tidsenheter genomsnittet räknas över, sen tar genomsnittet för detta vid varje given tidpunkt som simulationen körs. T.ex. dag 1-20,2-21,3-22 etc... om windowsize är 20. Denna information sparas i en ny kolumn kallad \"Moving Average\"\n",
+    "\n",
+    "\n",
+    "df['Upper Band'] = np.nan #En ny kolumn skapas i df som representerar det övre bandet (säljsignal)\n",
+    "df['Lower Band'] = np.nan #En ny kolumn skapas i df som representerar det nedre bandet (köpsignal)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-01T09:58:35.916619300Z",
-     "start_time": "2024-02-01T09:58:35.911150600Z"
+     "end_time": "2024-02-01T12:09:09.722454Z",
+     "start_time": "2024-02-01T12:09:05.513656300Z"
     }
    },
    "id": "12427311dea73e51",
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "cell_type": "code",
