förtydligar kring bollinger-band kolumnernas inledande tillstånd

--- a/BollingerTradingApp.ipynb
+++ b/BollingerTradingApp.ipynb
@@ -49,7 +49,7 @@
     "df['Moving Average'] = df['Data'].rolling(window=windowsize).mean() # Det glidande genomsnittet räknas ut genom att använda de inbyggda funktionerna \"rolling\" och \"mean\", som tar emot aktieprislistan och variablen windowsize som representerar hur många tidsenheter genomsnittet räknas över, sen tar genomsnittet för detta vid varje given tidpunkt som simulationen körs. T.ex. dag 1-20,2-21,3-22 etc... om windowsize är 20. Denna information sparas i en ny kolumn kallad \"Moving Average\"\n",
     "\n",
     "\n",
-    "df['Upper Band'] = np.nan #En ny kolumn skapas i df som representerar det övre bandet (säljsignal)\n",
+    "df['Upper Band'] = np.nan #En ny kolumn skapas i df som representerar det övre bandet (säljsignal) OBS: nan-värden populerar dessa kolumner inledningsvis, fram till dess att man kan räkna ut det glidande genomsnittet.\n",
     "df['Lower Band'] = np.nan #En ny kolumn skapas i df som representerar det nedre bandet (köpsignal)"
    ],
    "metadata": {
