Lade till standardavvikelser som variabel, prisgenerering inom en funktion, samt generering av Bollinger-banden som en funktion

--- a/BollingerTradingApp.ipynb
+++ b/BollingerTradingApp.ipynb
@@ -30,19 +30,23 @@
     "profitorloss = 0 # Arbiträrt startvärde, det kommer senare att tillskrivas ett värde för varje tdsenhert som simulerar prisfluktuation \n",
     "startprice = float(input(\"Ange aktiens initiala värde i början av tidsperioden\")) # Aktiens ursprungliga värde, det styr antalet enheter man kan köpa vid varje given tidpunkt\n",
     "windowsize = int(input(\"Ange antalet tidsenheter som det glidande medelvärdet ska beräknas över\")) # En nödvändig variabel för att uträkna det glidande genomsnittet, samt Bollinger-bandens beskaffenhet.\n",
+    "standarddeviations = int(input(\"Ange antalet standardavvikelser som du vill att Bollinger-banden ska vara från det glidande genomsnittet\"))\n",
     "\n",
-    "for i in range(tradingperiod): # Här fylls listorna som utgör x och y-värden för diagrammet\n",
-    "    priceindex.append(i) # Varje index sparas i listan för tidpunkter \n",
-    "    chance = np.random.randint(0, 12585) # Chance-variabeln represneterar sannolikheten att priset stiger eller sjunker vid varje given tidpunkt. Den är hämtad från ett genomsnitt av S&P-aktiers fluktuationer, liksom den genomsnittliga procentuella sjunkning eller stigning vid varje tidpunkt. Det är menat som ett exempel och inte ett vetenskaolig underlag, varför detaljer om denna informationsextrahering ej är inkluderad här. \n",
-    "    if chance <6628: # sannolikheten att aktien stiger (cirka 52,7%)\n",
-    "        profitorloss = 1.01503 # Aktien stiger med 1,5% om det slumpade värdet är under 6628\n",
-    "    else:\n",
-    "        profitorloss = 0.98574 # Aktien sjunker med lite över 1,4% om värdet är annat än ovanstående\n",
-    "    if len(stockprices) == 0: # I simulationens initiering är startpriset multiplicerat med prisfluktuationen det vi vill lägga in i aktieprislistan\n",
-    "       stockprices.append(startprice * profitorloss) # Aktiepriset läggs till i listan\n",
-    "    if len(stockprices) > 0 and len(stockprices) < tradingperiod: # Om aktieprislistan är längre än 0, är det senaste värdet som lagts till, det som ska vara föremål för prisfluktuationen.\n",
-    "        stockprices.append(stockprices[-1] * profitorloss) #Det senaste värdet i aktieprislistan blir utsatt för procentuell sänkning eller ökning och läggs till längst fram i listan. Detta repeteras sedan för hela tidsperioden som användaren angivit.\n",
-    "        \n",
+    "def generateprices():\n",
+    "    for i in range(tradingperiod): # Här fylls listorna som utgör x och y-värden för diagrammet\n",
+    "        priceindex.append(i) # Varje index sparas i listan för tidpunkter \n",
+    "        chance = np.random.randint(0, 12585) # Chance-variabeln represneterar sannolikheten att priset stiger eller sjunker vid varje given tidpunkt. Den är hämtad från ett genomsnitt av S&P-aktiers fluktuationer, liksom den genomsnittliga procentuella sjunkning eller stigning vid varje tidpunkt. Det är menat som ett exempel och inte ett vetenskaolig underlag, varför detaljer om denna informationsextrahering ej är inkluderad här. \n",
+    "        if chance <6628: # sannolikheten att aktien stiger (cirka 52,7%)\n",
+    "            profitorloss = 1.01503 # Aktien stiger med 1,5% om det slumpade värdet är under 6628\n",
+    "        else:\n",
+    "            profitorloss = 0.98574 # Aktien sjunker med lite över 1,4% om värdet är annat än ovanstående\n",
+    "        if len(stockprices) == 0: # I simulationens initiering är startpriset multiplicerat med prisfluktuationen det vi vill lägga in i aktieprislistan\n",
+    "           stockprices.append(startprice * profitorloss) # Aktiepriset läggs till i listan\n",
+    "        if len(stockprices) > 0 and len(stockprices) < tradingperiod: # Om aktieprislistan är längre än 0, är det senaste värdet som lagts till, det som ska vara föremål för prisfluktuationen.\n",
+    "            stockprices.append(stockprices[-1] * profitorloss) #Det senaste värdet i aktieprislistan blir utsatt för procentuell sänkning eller ökning och läggs till längst fram i listan. Detta repeteras sedan för hela tidsperioden som användaren angivit.\n",
+    "\n",
+    "generateprices()\n",
+    "\n",
     "df = pd.DataFrame(stockprices, columns=['Data']) # En Pandas-dataframe skapas, där aktieprisutvecklingen sparas i en ny kolumn kallad \"Data\" \n",
     "\n",
     "\n",
@@ -50,7 +54,16 @@
     "\n",
     "\n",
     "df['Upper Band'] = np.nan #En ny kolumn skapas i df som representerar det övre bandet (säljsignal) OBS: nan-värden populerar dessa kolumner inledningsvis, fram till dess att man kan räkna ut det glidande genomsnittet.\n",
-    "df['Lower Band'] = np.nan #En ny kolumn skapas i df som representerar det nedre bandet (köpsignal)"
+    "df['Lower Band'] = np.nan #En ny kolumn skapas i df som representerar det nedre bandet (köpsignal)\n",
+    "\n",
+    "def generatebollingerbands():\n",
+    "    for i in range(len(stockprices) - windowsize + 1): #Här populeras dataframe-kolumnerna för övre och nedre banden. Spannet som loopen går igenom representerar det rum som det glidande genomsnittet kan räknas ut inom, vilket beror på periodens längd, liksom fönstrets storlek.\n",
+    "        window = stockprices[i : i + windowsize] # window-variabeln representerar ett spann av värden vars start och slut ökar med ett inkrement för varje loop-omgång fram till dess att det nått slutet av aktieprislistan.\n",
+    "        window_average = sum(window) / windowsize # Genomsnittet för alla värden inom varje givet fönster under perioden\n",
+    "        std_dev = statistics.stdev(window) # För att bandens kolumner ska populeras, behöver vi veta standardavvikelsen inom varje fönster.\n",
+    "        df.loc[i + windowsize - 1, 'Upper Band'] = window_average + standarddeviations*std_dev # Kolumnen som representerar det övre bandet populeras med värden som motsvarar det glidande genomsnittet + så många standardavvikelser som användaren vill att den ska vara över detta värde.\n",
+    "        df.loc[i + windowsize - 1, 'Lower Band'] = window_average - standarddeviations*std_dev # Kolumnen som representerar det nedre bandet populeras med värden som motsvarar det glidande genomsnittet - så många standardavvikelser som användaren vill att den ska vara under detta värde.\n",
+    "generatebollingerbands()"
    ],
    "metadata": {
     "collapsed": false,
